php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #62565 Crashes due non-initialized internal properties_table
Submitted: 2012-07-14 15:04 UTC Modified: 2012-07-14 15:27 UTC
From: felipe@php.net Assigned: felipe (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: master-Git-2012-07-14 (Git) OS:
Private report: No CVE-ID: None
 [2012-07-14 15:04 UTC] felipe@php.net
Description:
------------
I've checked using my fuzzer some crash due non-initialized property_table, see below. These issues are related to the missing object_properties_init() call.

Test script:
---------------
Using a basic template code:

<?php

class foo extends %{classname} {
	public $foo = 'test';
	
	public function __construct() { }
}

$x = new foo;
var_dump($x);

I found issues with:

- Collator
- NumberFormatter
- IntlDateFormatter
- ResourceBundle
- Spoofchecker
- __PHP_Incomplete_Class

Expected result:
----------------
No crashes.

Actual result:
--------------
Crashes

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-07-14 15:25 UTC] felipe@php.net
Automatic comment on behalf of felipensp@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=0bff7cfadd0177601cd7b7253b7311d3bd13fa45
Log: - Fixed bug #62565 (Crashes due non-initialized internal properties_table)
 [2012-07-14 15:27 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-07-14 15:27 UTC] felipe@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: felipe
 [2014-10-07 23:23 UTC] stas@php.net
Automatic comment on behalf of felipensp@gmail.com
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=0bff7cfadd0177601cd7b7253b7311d3bd13fa45
Log: - Fixed bug #62565 (Crashes due non-initialized internal properties_table)
 [2014-10-07 23:34 UTC] stas@php.net
Automatic comment on behalf of felipensp@gmail.com
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=0bff7cfadd0177601cd7b7253b7311d3bd13fa45
Log: - Fixed bug #62565 (Crashes due non-initialized internal properties_table)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 29 19:00:01 2026 UTC