- Fixed bug #62565 (Crashes due non-initialized internal properties_table)